{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Gameplay",
            "id": "21932cdf-457c-43a3-b4f0-3b9bed7de953",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Value",
                    "id": "34e86a13-3798-426b-a493-11f5fa24def3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9e9ca32e-3581-465f-b260-a47c1a49ce4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "arrows",
                    "id": "5f5bd331-1086-41e8-a4b0-4ebed32bb1a5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1cfeff8f-9c2b-403b-a989-39b8973ff51a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bd34607b-88cf-4390-9330-d2ec79d1856c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "wasd",
                    "id": "03382744-076b-4a52-be53-ed7623637bb0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d1002e6d-b3c6-4e6c-a70a-ec6673f75bc7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "db2f8316-4b7d-4c6b-a14f-91226b97b23b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aea6a3ec-2c59-4571-9955-d97f9827a805",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap(duration=0.1,pressPoint=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}